tests/chapter_16/valid/strings_as_lvalues/atoi.c
// test standard library function
int atoi(char *str);
int main(void)
{
    return atoi("10");
}